增加了一个ul，修改了h6为h5

--- a/test2.html
+++ b/test2.html
@@ -14,11 +14,23 @@
           <p>有异响（2个）</p>
         </li>
         <li>
-          <h6>前门</h6>
+          <h5>前门</h5>
           <p>有异响（2个）</p>
           <p>有异响（2个）</p>
         </li>
       </ul>
     </div>
   </div>
+  <ul>
+    <li>
+      <h6>前门</h6>
+      <p>有异响（2个）</p>
+      <p>有异响（2个）</p>
+    </li>
+    <li>
+      <h6>前门</h6>
+      <p>有异响（2个）</p>
+      <p>有异响（2个）</p>
+    </li>
+  </ul>
 </section>
